# videocheck

./: README.md  代码环境与编译.docx  工时估算.xlsx
VideoSdk/: CMakeLists.txt  Makefile  VideoChannel.cpp  VideoChannel.h  VideoSdk.cpp  VideoSdk.h  VideoSdk.rar  VideoSdk.sln  VideoSdk.vcxproj  VideoSdk.vcxproj.filters  VideoSdkImpl.cpp  VideoSdkImpl.h  devicelist.json  devicelist_record.json  devicelist_record_invite.json  devicelist_record_res.json  sdkdemo  sdkdemod
VideoSdk/ffmpeg/lib/: libavdevice.so.58  libavfilter.so.7  libavformat.so.58  libavutil.so.56  libnvmpi.so.1  libswresample.so.3  libswscale.so.5
VideoSdk/http/: httpclient.cpp  httpclient.h  httpclient_st.cpp  httpclient_st.h  mongoose.c
VideoSdk/live555/libs/debug/: libBasicUsageEnvironment.lib  libUsageEnvironment.lib  libgroupsock.lib
VideoSdk/live555/libs/release/: libBasicUsageEnvironment.lib  libUsageEnvironment.lib  libgroupsock.lib
VideoSdk/live555/libs/win32/Debug/: BasicUsageEnvironment.lib  groupsock.lib
VideoSdk/live555/libs/x64/release/: groupsock.lib
VideoSdk/live5551/include/BasicUsageEnvironment/: BasicHashTable.hh
VideoSdk/live5551/include/liveMedia/: FramedSource.hh
VideoSdk/live5551/libs/win32/Debug/: UsageEnvironment.lib
VideoSdk/live5551/libs/win32/Release/: BasicUsageEnvironment.lib  UsageEnvironment.lib  groupsock.lib
VideoSdk/live5551/libs/x64/debug/: BasicUsageEnvironment.lib  UsageEnvironment.lib  groupsock.lib
VideoSdk/live5551/libs/x64/release/: BasicUsageEnvironment.lib  UsageEnvironment.lib
VideoSdk/rapidjson/: utils.h
VideoSdk/rtspclient/: RTSPStream_keyframe.cpp  RtspInterface.cpp  RtspInterface.h  RtspStream.cpp  RtspStream.h  live_video.cpp  live_video.h  media_format.h
VideoSdk/util/: HardDiskManager.cpp  HardDiskManager.h  MD5.cpp  ObjectLists.h  defs.h  lock.h  pubutil.cpp  pubutil.h  rwLock.h  sole.hpp  sys_inc.h  sys_log.cpp  sys_log.h  sys_os.cpp
java_demo/: CFJna.java  CFJnaTest.java  chcekVideoDiagnoseLibrarys.java
sdkdemo/: Config.cpp  Config.h  devicelist.json  sdkdemo.cpp  sdkdemo.vcxproj  sdkdemo.vcxproj.filters
